--- a/WebApplication/Views/Review/Index.cshtml
+++ b/WebApplication/Views/Review/Index.cshtml
@@ -4,8 +4,6 @@
     Layout = "~/Views/Shared/LayoutAdmin.cshtml";
 }
 
-<h2>Index</h2>
-
 @model WebApplication.Models.ReviewModel
 
 <!DOCTYPE html>
@@ -137,30 +135,30 @@
                 });
             });
 
-            $('.accept-btn').on('click', function () {
-                // Accept button functionality
-                alert('Review accepted');
-                // Here you can add an AJAX call to update the review status in the database
-            });
+            //$('.accept-btn').on('click', function () {
+            //    // Accept button functionality
+            //    alert('Review accepted');
+            //    // Here you can add an AJAX call to update the review status in the database
+            //});
 
-            $('.deny-btn').on('click', function () {
-                // Deny button functionality
-                alert('Review denied');
-                // Here you can add an AJAX call to update the review status in the database
-            });
+            //$('.deny-btn').on('click', function () {
+            //    // Deny button functionality
+            //    alert('Review denied');
+            //    // Here you can add an AJAX call to update the review status in the database
+            //});
 
-            $('.delete-btn').on('click', function () {
-                // Delete button functionality
-                if (confirm('Are you sure you want to delete this review?')) {
-                    $(this).closest('tr').remove();
-                }
-            });
+            //$('.delete-btn').on('click', function () {
+            //    // Delete button functionality
+            //    if (confirm('Are you sure you want to delete this review?')) {
+            //        $(this).closest('tr').remove();
+            //    }
+            //});
 
-            $('#addReviewBtn').on('click', function () {
-                // Add review button functionality
-                alert('Add Review button clicked');
-                // Here you can add code to show a modal or redirect to a review creation page
-            });
+            //$('#addReviewBtn').on('click', function () {
+            //    // Add review button functionality
+            //    alert('Add Review button clicked');
+            //    // Here you can add code to show a modal or redirect to a review creation page
+            //});
         });</script>
 </body>
 </html>
