--- a/WebApplication/Views/Admin/AdminAccount.cshtml
+++ b/WebApplication/Views/Admin/AdminAccount.cshtml
@@ -1,8 +1,27 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "AdminAccount";
     Layout = "~/Views/Shared/LayoutAdmin.cshtml";
 }
 
-<h3>Hi, Admin</h3>
+<div style="font-family: Arial, sans-serif; max-width: 1500px; margin: 0 auto; padding: 20px; background-color: #f9f9f9; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
 
+    <h2 style="font-size: 32px; color: #333; margin-bottom: 20px;">Hi, Admin</h2>
+
+    <p style="font-size: 18px; line-height: 1.6; color: #666;">
+        Welcome to the admin panel of the toy store.
+        Here, you have access to all the tools and features necessary to manage the store efficiently. From managing users and products to handling reviews and orders, everything is at your fingertips. Feel free to navigate through the various sections and make the most out of your administrative privileges.
+    </p>
+
+    <p style="font-size: 18px; line-height: 1.6; color: #666; margin-top: 20px;">
+        In addition to managing the core aspects of the store, you can also analyze sales data, track inventory, and communicate with customers. Our goal is to provide you with a comprehensive platform that simplifies the management process and enables you to focus on growing your business.
+    </p>
+
+    <p style="font-size: 18px; line-height: 1.6; color: #666; margin-top: 20px;">
+        The admin panel is equipped with intuitive controls and informative dashboards to give you a clear overview of your store's performance. Whether you're monitoring sales trends, updating product listings, or responding to customer inquiries, you'll find everything you need to stay organized and informed.
+    </p>
+
+    <p style="font-size: 18px; line-height: 1.6; color: #666; margin-top: 20px;">
+        As you explore the admin panel, don't hesitate to experiment with different features and settings. Different options allow you to manage the platform to your specific needs and preferences, ensuring that your workflow is optimized for maximum efficiency.
+    </p>
+
+</div>
