--- a/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/Views/Home/Index.cshtml
@@ -1,9 +1,10 @@
 ﻿<!-- add model BusinessObjects.UserBO-->
 
 @{
-     ViewBag.Title = "Index";
+    ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 
 <!-- Hero Banner start -->
 <div class="hero-banner-2">
@@ -11,7 +12,9 @@
         <div class="content">
             <div class="title mb-32">
                 <h2 class="h-61 bold color-white">WONDER & EXCITEMENT</h2>
-                <p class="color-white">Lorem ipsum dolor sit amet consectetur. Id enim hendrerit enim <br> molestie. Duis quam eleifend aliquam diam vulputate.</p>
+                <p class="color-white">
+                    Discover the joy of play with our wide selection of toys for children of all ages.<br> Thank you for visiting the Online Toy Store. Happy shopping, and may your adventures in play begin!
+                </p>
             </div>
             <a href="/Home/ShopListing" class="cus-btn primary">Shop Now</a>
         </div>
