--- a/WebApplication/Views/ManageProduct/EditProduct.cshtml
+++ b/WebApplication/Views/ManageProduct/EditProduct.cshtml
@@ -1,12 +1,5 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "EditProduct";
-    Layout = "~/Views/Shared/LayoutAdmin.cshtml";
-}
-
-
-@{
-    ViewBag.Title = "EditProductView";
     Layout = "~/Views/Shared/LayoutAdmin.cshtml";
 }
 
@@ -14,17 +7,13 @@
 
 <h3>Edit Product # @Model.ProductNumber</h3>
 
-
 @using (Html.BeginForm("EditProductAction", "ManageProduct", FormMethod.Post))
 {
-
     <input type="hidden" name="ProductNumber" value="@Model.ProductNumber">
 
     <div class="form-group">
         <label for="ProductName">Name</label>
-
         <textarea class="form-control" id="ProductName" name="ProductName" required>@Model.ProductName</textarea>
-
     </div>
 
     <div class="form-group">
@@ -34,17 +23,32 @@
 
     <div class="form-group">
         <label for="CategoryByAge">Category By Age</label>
-        <textarea class="form-control" id="CategoryByAge" name="CategoryByAge" required>@Model.CategoryByAge</textarea>
+        <select class="form-control" id="CategoryByAge" name="CategoryByAge" required>
+            <option value="0-3" @(Model.CategoryByAge == "0-3" ? "selected" : "")>0-3</option>
+            <option value="3-10" @(Model.CategoryByAge == "3-10" ? "selected" : "")>3-10</option>
+            <option value="10-16" @(Model.CategoryByAge == "10-16" ? "selected" : "")>10-16</option>
+            <option value="16-21" @(Model.CategoryByAge == "16-21" ? "selected" : "")>16-21</option>
+        </select>
     </div>
 
     <div class="form-group">
         <label for="Category">Category</label>
-        <textarea class="form-control" id="Category" name="Category" required>@Model.Category</textarea>
+        <select class="form-control" id="Category" name="Category" required>
+            <option value="Toy Sets" @(Model.Category == "Toy Sets" ? "selected" : "")>Toy Sets</option>
+            <option value="Plush Toy" @(Model.Category == "Plush Toy" ? "selected" : "")>Plush Toy</option>
+            <option value="Lego Bricks" @(Model.Category == "Lego Bricks" ? "selected" : "")>Lego Bricks</option>
+            <option value="Remote Control" @(Model.Category == "Remote Control" ? "selected" : "")>Remote Control</option>
+        </select>
     </div>
 
     <div class="form-group">
         <label for="SellCategory">Sell Category</label>
-        <textarea class="form-control" id="SellCategory" name="SellCategory" required>@Model.SellCategory</textarea>
+        <select class="form-control" id="SellCategory" name="SellCategory" required>
+            <option value="On Sales" @(Model.SellCategory == "On Sales" ? "selected" : "")>On Sales</option>
+            <option value="Top Sales" @(Model.SellCategory == "Top Sales" ? "selected" : "")>Top Sales</option>
+            <option value="Boys" @(Model.SellCategory == "Boys" ? "selected" : "")>Boys</option>
+            <option value="Girls" @(Model.SellCategory == "Girls" ? "selected" : "")>Girls</option>
+        </select>
     </div>
 
     <div class="form-group">
@@ -53,21 +57,17 @@
     </div>
 
     <div class="form-group">
-        <label for="Quantity">ProductDetail</label>
+        <label for="ProductDetail">ProductDetail</label>
         <textarea class="form-control" id="ProductDetail" name="ProductDetail" rows="5" required>@Model.ProductDetail</textarea>
     </div>
 
     <div class="form-group">
-        <div class="form-check">
-            <input type="checkbox" class="form-check-input active-checkbox" id="IsActive" name="IsActive" @(Model.IsActive ? "checked" : "")>
-            <label class="form-check-label" for="IsActive">Active</label>
-        </div>
+        <label for="IsActive">Active</label>
+        <select class="form-control" id="IsActive" name="IsActive">
+            <option value="true" @(Model.IsActive ? "selected" : "")>True</option>
+            <option value="false" @(!Model.IsActive ? "selected" : "")>False</option>
+        </select>
     </div>
-
-
 
     <button type="submit" class="btn btn-primary">Save changes</button>
 }
-
-
-
