--- a/WebApplication/Views/ManageProduct/Index.cshtml
+++ b/WebApplication/Views/ManageProduct/Index.cshtml
@@ -11,8 +11,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Product Management</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    
+
 </head>
 <body>
+
     <div class="container mt-5">
         <h2 class="mb-4">Product Management</h2>
         <div class="row mb-3">
@@ -45,7 +48,7 @@
                                 <td>@item.ProductName</td>
                                 <td>@item.Category</td>
                                 <td>@item.Price</td>
-                                <td><input type="checkbox" class="active-checkbox" @(item.IsActive ? "checked" : "")></td>
+                                <td><input type="checkbox" class="active-checkbox" @(item.IsActive ? "checked" : "") disabled></td>
 
                             </tr>
                         }
@@ -82,11 +85,11 @@
 
 
                 @*</tbody>
-                        </table>
-                        <div class="text-left">
-                            <button class="btn btn-danger btn-lg" id="addProductBtn">Add Product</button>
-                        </div>
-                    </div>*@
+            </table>
+            <div class="text-left">
+                <button class="btn btn-danger btn-lg" id="addProductBtn">Add Product</button>
+            </div>
+        </div>*@
 
                 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
                 @Html.Raw("<script src=\"https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js\"></script>")
@@ -125,6 +128,8 @@
                 window.location.href = '@Url.Action("CreateProduct", "ManageProduct")';
             });
         });
-                </script>
+
+                
+                
 </body>
 </html>
