--- a/WebApplication/Views/Shared/LayoutUsers.cshtml
+++ b/WebApplication/Views/Shared/LayoutUsers.cshtml
@@ -3,10 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Dashboard</title>
+    <title>User Account Toy Store</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
+        /* Стили для панели навигации */
+        .navbar {
+            background-color: #333;
+            padding: 10px;
+        }
+
+        /* Стили для кнопок навигации */
+        .nav-buttons {
+            display: flex;
+            align-items: center;
+        }
+
+        /* Стили для ссылок меню */
+        .menu-link {
+            color: black;
+            text-decoration: none;
+            padding: 10px 15px;
+            margin: 0 10px;
+            border-radius: 5px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+            /* Стили при наведении курсора на ссылку */
+            .menu-link:hover {
+                background-color: #555;
+                color: white;
+            }
+
         body {
             display: flex;
             min-height: 100vh;
@@ -108,29 +136,21 @@
         <div class="logo">
             <h3>Hi, @User.Identity.Name</h3>
         </div>
-
+        @Html.ActionLink("Dashboard", "UserAccount", "User", new { @class = "btn btn-link text-white d-block text-left" })
         @Html.ActionLink("Edit Info", "EditInfo", "User", new { @class = "btn btn-link text-white d-block text-left" })
         @Html.ActionLink("View Orders", "ViewOrdersU", "User", new { @class = "btn btn-link text-white d-block text-left" })
     </div>
     <div class="main-content">
         <div class="navbar">
             <div class="nav-buttons">
-                
                 @Html.ActionLink("Home", "HomeUsers", "HomeUser", new { area = "" }, new { @class = "menu-link" })
-                <div class="user-dropdown">
-                    <img src="https://via.placeholder.com/40" alt="User" class="rounded-circle">
-                    <div class="user-dropdown-content">
-                        
-
-                        @Html.ActionLink("Log out", "LogOut", "Login", new { area = "" }, new { @class = "menu-link" })
-                    </div>
-                </div>
+                @Html.ActionLink("Log out", "LogOut", "Login", new { area = "" }, new { @class = "menu-link" })
             </div>
         </div>
         <div class="container-fluid">
             @RenderBody()
         </div>
-    </div>
+   
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
