--- a/WebApplication/Views/Shared/ULayout.cshtml
+++ b/WebApplication/Views/Shared/ULayout.cshtml
@@ -11,7 +11,7 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Striker HTML5 Template">
 
-    <title>Toy Store Html Template</title>
+    <title>Online Toy Store</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon"
