--- a/WebApplication/Views/Shared/_Layout.cshtml
+++ b/WebApplication/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Striker HTML5 Template">
 
-    <title>Toy Store Html Template</title>
+    <title>Online Toy Strore</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon"
@@ -182,17 +182,17 @@
                             </a>
                         </div>
                         <p class="color-white mb-32">
-                            Welcome to our world of imagination <br> and play! At Sarah's Toy Emporium, we <br>
+                            Welcome to our world of imagination <br> and play! At our Toy Emporium, we <br>
                             believe in creating magical experiences <br> for children and igniting their joy.
                         </p>
 
                         <div class="contact">
                             <ul class="contact-list unstyled">
                                 <li class="mb-32">
-                                    <a href="tel:0123456789"> <i class="fal fa-phone-alt"></i> <span>+1 233 898 0897</span></a>
+                                    <a href="tel:0788815133"> <i class="fal fa-phone-alt"></i> <span>+233 898 0897</span></a>
                                 </li>
                                 <li class="">
-                                    <a href="mailto:info@example.com"><i class="fal fa-envelope"></i>  <span>email@example.com</span></a>
+                                    <a href="mailto:info@example.com"><i class="fal fa-envelope"></i>  <span>Admin@example.com</span></a>
                                 </li>
                             </ul>
                         </div>
@@ -250,7 +250,7 @@
                     </div>*@
                 </div>
             </div>
-            <p class="color-white text-center">©2023 Cricket Pulse All Rights Reserved.</p>
+            <p class="color-white text-center">©2024 All Rights Reserved.</p>
         </div>
     </footer>
      @*Footer Area End*@  
