--- a/WebApplication/Views/ManageContent/ManageContent.cshtml
+++ b/WebApplication/Views/ManageContent/ManageContent.cshtml
@@ -1,11 +1,10 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "ManageContent";
     Layout = "~/Views/Shared/LayoutAdmin.cshtml";
 }
 
 @model WebApplication.Models.ArticleDataModel
-    
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -25,11 +24,11 @@
             </div>
         </div>
 
-
         <table class="table table-bordered">
             <thead class="thead-dark">
                 <tr>
                     <th>#</th>
+                    <th>Image</th> <!-- Новый столбец для изображений -->
                     <th>Title</th>
                     <th>Author</th>
                     <th>Category</th>
@@ -40,28 +39,33 @@
 
                 @{
                     var dataArticlesTable = Model.dataForTable();
-                                        
+
                     foreach (var item in dataArticlesTable)
                     {
                         if (item != null)
                         {
                             <tr>
-
                                 <td>@item.ArticleNumber</td>
+                                <td>
+                                    @if (!string.IsNullOrEmpty(item.ImagePath))
+                                    {
+                                        <img src="@Url.Content(item.ImagePath)" alt="Article Image" style="width: 50px; height: 50px;">
+                                    }
+                                    else
+                                    {
+                                        <span>No Image</span>
+                                    }
+                                </td>
                                 <td>@item.ArticleName</td>
                                 <td>@item.AuthorName</td>
                                 <td>@item.Category</td>
-
                             </tr>
-
                         }
                     }
-
                 }
 
             </tbody>
         </table>
-
 
         <div class="text-left mb-3">
             @using (Html.BeginForm("AddArticle", "ManageContent", FormMethod.Get, new { id = "addArticleForm" }))
@@ -90,24 +94,20 @@
             }
         </div>
 
-
     </div>
-
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
-            $(document).ready(function(){
-                $('#search').on('keyup', function() {
-                    var value = $(this).val().toLowerCase();
-                    $('#articleTable tr').filter(function() {
-                        $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
-                    });
-                });                                                                                                             
+        $(document).ready(function () {
+            $('#search').on('keyup', function () {
+                var value = $(this).val().toLowerCase();
+                $('#articleTable tr').filter(function () {
+                    $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+                });
             });
-        </script>
+        });
+    </script>
 </body>
 </html>
-
-
