--- a/WebApplication/Views/Login/SignUp.cshtml
+++ b/WebApplication/Views/Login/SignUp.cshtml
@@ -15,7 +15,7 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Striker HTML5 Template">
 
-    <title>Toy Store Html Template</title>
+    <title>Online Toy Strore</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon"
