--- a/WebApplication/Views/Shared/ULayout.cshtml
+++ b/WebApplication/Views/Shared/ULayout.cshtml
@@ -184,17 +184,17 @@
                             </a>
                         </div>
                         <p class="color-white mb-32">
-                            Welcome to our world of imagination <br> and play! At Sarah's Toy Emporium, we <br>
+                            Welcome to our world of imagination <br> and play! At our Online Toy Emporium, we <br>
                             believe in creating magical experiences <br> for children and igniting their joy.
                         </p>
 
                         <div class="contact">
                             <ul class="contact-list unstyled">
                                 <li class="mb-32">
-                                    <a href="tel:0123456789"> <i class="fal fa-phone-alt"></i> <span>+1 233 898 0897</span></a>
+                                    <a href="tel:078815133"> <i class="fal fa-phone-alt"></i> <span>+233 898 0897</span></a>
                                 </li>
                                 <li class="">
-                                    <a href="mailto:info@example.com"><i class="fal fa-envelope"></i>  <span>email@example.com</span></a>
+                                    <a href="mailto:info@example.com"><i class="fal fa-envelope"></i>  <span>Admin@example.com</span></a>
                                 </li>
                             </ul>
                         </div>
@@ -252,7 +252,7 @@
                     </div>*@
                 </div>
             </div>
-            <p class="color-white text-center">©2023 Cricket Pulse All Rights Reserved.</p>
+            <p class="color-white text-center">©2024 Cricket Pulse All Rights Reserved.</p>
         </div>
     </footer>
     <!-- Footer Area End  -->
