--- a/WebApplication/Views/Login/SignUp.cshtml
+++ b/WebApplication/Views/Login/SignUp.cshtml
@@ -187,7 +187,7 @@
 
                                 <div class="form-group mb-3">
                                     @Html.LabelFor(m => m.KeyCredential, new { @class = "control-label" })
-                                    @Html.TextBoxFor(m => m.KeyCredential, new { @class = "form-control", placeholder = "Enter your key credential phrase"})
+                                    @Html.TextBoxFor(m => m.KeyCredential, new { @class = "form-control", placeholder = "Key credential phrase for admin"})
                                     @Html.ValidationMessageFor(m => m.KeyCredential, "", new { @class = "text-danger" })
                                 </div>
                      
