--- a/WebApplication/Views/ManageProduct/CreateProduct.cshtml
+++ b/WebApplication/Views/ManageProduct/CreateProduct.cshtml
@@ -77,7 +77,7 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Save</button>
-    <button type="button" class="btn btn-secondary" onclick="window.location.href='@Url.Action("Index", "Products")'">Cancel</button>
+    <button type="button" class="btn btn-secondary" onclick="window.location.href='@Url.Action("Index", "ManageProduct")'">Cancel</button>
 }
 
 
